Set background-attachment to fixed to ensure background image covers entire scrollable portion of webpage

--- a/src/App.css
+++ b/src/App.css
@@ -239,6 +239,7 @@ body#logged-in {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
 }
 
 body#email-verified,
